// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fab button 1`] = `
"<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--active\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--right-space\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--2 var-button--round var-bottom-navigation__fab var-bottom-navigation--fab-right\\" var-bottom-navigation__fab=\\"\\">
    <!--v-if-->
    <div class=\\"var-button__content\\">
      <div class=\\"tab_example\\"></div>
    </div>
  </button></div>"
`;

exports[`test BottomNavigation relation BottomNavigationItems 1`] = `
"<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--active\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`test BottomNavigation relation BottomNavigationItems 2`] = `
"<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--active\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`test bottom-navigation example 1`] = `
"<div class=\\"app-type\\">基本使用</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>
<div class=\\"app-type\\">通过名称匹配</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--active\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>
<div class=\\"app-type\\">徽标提示</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <div class=\\"var-badge var--box\\">
      <transition-stub><span class=\\"var-bottom-navigation-item__badge var-badge__content var-badge--danger var-badge__dot var-badge__dot--right\\" var-bottom-navigation-item-cover=\\"\\"><span></span></span></transition-stub>
    </div><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <div class=\\"var-badge var--box\\">
      <transition-stub><span class=\\"var-bottom-navigation-item__badge var-badge__content var-badge--primary\\" var-bottom-navigation-item-cover=\\"\\"><span>66</span></span></transition-stub>
    </div><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>
<div class=\\"app-type\\">自定义颜色</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>
<div class=\\"app-type\\">监听切换事件</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>
<div class=\\"app-type\\">监听点击事件</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-account-circle var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if-->
</div>
<div class=\\"app-type\\">悬浮按钮</div>
<div class=\\"var-bottom-navigation\\" style=\\"z-index: 1; margin-top: 10px;\\"><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-home var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--right-half-space\\"><i class=\\"var-icon var-icon--set var-icon-magnify var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item var-bottom-navigation-item--left-half-space\\"><i class=\\"var-icon var-icon--set var-icon-heart var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button><button class=\\"var-bottom-navigation-item\\"><i class=\\"var-icon var-icon--set var-icon-bell var-bottom-navigation-item__icon\\" style=\\"transition: transform 0ms;\\" var-bottom-navigation-item-cover=\\"\\"></i>
    <!--v-if--><span class=\\"var-bottom-navigation-item__label\\">标签</span>
  </button>
  <!--v-if--><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--2 var-button--round var-bottom-navigation__fab var-bottom-navigation--fab-center\\" var-bottom-navigation__fab=\\"\\">
    <!--v-if-->
    <div class=\\"var-button__content\\"><i class=\\"var-icon var-icon--set var-icon-heart\\" style=\\"transition: transform 0ms;\\"></i></div>
  </button>
</div>"
`;
